# IGNORAMUS

./: .bumpversion.cfg  .gitignore  README.md  main.py  pyproject.toml  upscaler.py  version_checker.py
ignoramus/: __main__.py  face_swapper.py  image_generator.py  main.py  upscaler.py  utils.py  version_checker.py
