[tool.poetry]
name = "image-generator"
version = "0.1.0"
description = ""
authors = ["jkarenko <juho.karenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
replicate = "*"
tqdm = "^4.66.5"
requests = "^2.32.3"
pillow = "^10.4.0"
piexif = "^1.1.3"
pyperclip = "^1.9.0"
foundation = "^0.1.0a0.dev1"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
