[tool.poetry]
name = "IGNORAMUS"
version = "1.6.0"
description = ""
authors = ["jkarenko <juho.karenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
replicate = "*"
requests = "^2.32.3"
pillow = "^10.4.0"
piexif = "^1.1.3"
toml = "^0.10.2"
pyqt5 = "^5.15.11"
pyqt5-qt5 = "^5.15.2"
pyqt5_sip = "^12.15.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/jkarenko/IGNORAMUS"
repo_api = "https://api.github.com/repos/jkarenko/IGNORAMUS/git"

[tool.poetry.scripts]
ignoramus = "ignoramus.main:main"
